test: fix somme test
